<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".mainmenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal">

        <SearchView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#cefefdfd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </SearchView>

        <ImageButton
            android:id="@+id/micro"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#cefefdfd"
            app:srcCompat="@android:drawable/presence_audio_busy"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#00000000"
        android:orientation="vertical">

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/todayrecommend"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/todayrecommend"
                android:textSize="15sp" />

            <Button
                android:id="@+id/more1"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/more"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageButton
                android:id="@+id/imagecake1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"
                app:srcCompat="@drawable/cake"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cake1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/cake1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cake1info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/cake1info"
                    android:textColor="@color/darkGray"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/like"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="70dp"
                        android:layout_weight="1"
                        app:srcCompat="@android:drawable/btn_star_big_on"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/cake1like"
                        android:layout_width="5dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/like"
                        android:textColor="@color/darkGray"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#00000000"
        android:orientation="vertical" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chinese"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/chinese"
                android:textSize="15sp" />

            <Button
                android:id="@+id/more2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/more"
                android:textColor="@android:color/darker_gray"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <ImageButton
                android:id="@+id/imagechinese1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/chinese"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imagechinese2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/chinese2"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imagechinese3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/chinese3"
                tools:ignore="ContentDescription" />


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="#00000000"
        android:orientation="vertical" />


</LinearLayout>
